added endpoint to update users
