# src/api/controllers/user.controller.js
@@ -1,0 +1,9 @@
+const UserService = require('../services/user.service');
+
+function updateUser(req, res) {
+  new UserService(req, res).updateUser();
+}
+
+module.exports = {
+  updateUser
+};
